Fixing the position and alignment

--- a/src/components/side.css
+++ b/src/components/side.css
@@ -10,7 +10,7 @@
   border-right: 2px solid #333333;
 }
 
-.sidePanel-mobile{
+.sidePanel-mobile {
   background-color: rgb(23, 23, 37);
 }
 
@@ -24,7 +24,7 @@
   .sidePanel {
     display: none;
   }
-  
+
   .sidePanel-mobile {
     display: grid;
     grid-template-columns: 1/3;
@@ -74,44 +74,54 @@
   line-height: 100%;
   grid-row: 2/3;
   grid-column: 2/3;
-  align-self: center;
-  justify-self: end;
+  align-items: center;
+  justify-items: end;
   display: grid;
   grid-template-columns: 1fr auto;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: repeat(3, 1fr);
 }
 
-#sideLastFundChange {
+#currentFundsWrapperChange {
   font-size: 17px;
   font-weight: bold;
+  grid-row: 1/2;
+  grid-column: 1/2;
+  align-items: end;
+}
+
+.currentFundsWrapperChangeLogo {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  font-size: 12px;
 }
 
 .currentFundsWrapperSatoshis {
   font-weight: bold;
   font-size: 17px;
-  grid-row: 1/2;
+  grid-row: 2/3;
   grid-column: 1/2;
 }
 
 .currentFundsWrapperSatoshisLogo {
   font-size: 12px;
-  grid-row: 1/2;
+  grid-row: 2/3;
   grid-column: 2/2;
 }
 
 .currentFundsWrapperEuro {
   opacity: 0.5;
   font-size: 15px;
-  grid-row: 2/2;
+  grid-row: 3/4;
   grid-column: 2/1;
   justify-self: end;
 }
 
 .currentFundsWrapperEuroLogo {
   opacity: 0.5;
-  font-size: 12px;
-  grid-row: 2/2;
+  font-size: 10px;
+  grid-row: 3/4;
   grid-column: 2/2;
+  margin-left: 0.2rem;
 }
 
 .side-buttons-wrapper {
